--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -143,10 +143,10 @@ position: sticky;
 
 }
 img {
-        width: 100vw;
+        width: 200vw;
         height: 100vh;
         position: absolute;
-        left: -90vh;
+        /* left: -90vh; */
         z-index: -99999;
         opacity: 0.8;
     }
