--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -432,9 +432,9 @@ margin: auto;       }
 
 
 {% endblock %}
-
+{% comment %} 
   {% block js %}
 
 {% load static %}
 <script src="{% static 'static.js' %}"></script>
-{% endblock js %} 
+{% endblock js %}  {% endcomment %}
