--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -24,6 +24,51 @@
     top: 20%;
 
   }
+  .onoffswitch {
+    position: relative; width: 155px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "Covid Recovered";
+    padding-left: 10px;
+    background-color: rgb(0, 42, 255); color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "Blood Donor";
+    padding-right: 10px;
+    background-color: rgb(238, 0, 255); color: #FFFFFF;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 46px; margin: 2px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 101px;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
+}
 </style>{% endblock css %}
 
 {% block body %}
@@ -49,6 +94,13 @@
           <input type="email" name="pemail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
+        <div class="onoffswitch">
+    <input type="checkbox" name="DorCS" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+    <label class="onoffswitch-label" for="myonoffswitch">
+        <span class="onoffswitch-inner"></span>
+        <span class="onoffswitch-switch"></span>
+    </label>
+</div>
         {% comment %} <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Patient Blood group</label>
           <input type="text" name="pbloodgrp" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
