--- a/templates/base.html
+++ b/templates/base.html
@@ -289,7 +289,7 @@
       animation: l 4s ease-out -0.2s 1;
     }
     .n{
-      max-height:7.5vh ;
+      max-height:9vh ;
     }
 
     .cc {
@@ -307,6 +307,10 @@
 
     .closebtn:hover {
       color: black;
+    }
+    #i{
+        margin: -9px;
+      font-size:1.2em ;
     }
 
     @keyframes l {
@@ -348,8 +352,8 @@
       z-index: 9899898;
   
       position: relative;
-      top: -16px;
-      left: -10px;
+      top: -5px;
+      left: -5px;
       transition: all 0.7s;
     }
   </style>
@@ -366,6 +370,7 @@
     <header id="i" class="p-3 bg-dark nn tran text-white">
       {% load static %}
       <a id="x"> <img id="togg" src="{% static "imgs/menu.png" %}" alt=""> </a>
+      <br>
       <div id="navbar" class="container">
         <div id="navbar2" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
