--- a/templates/home/contact_us.html
+++ b/templates/home/contact_us.html
@@ -115,7 +115,7 @@
 
 {% block body %}
 
-<div class="t">
+<div id="r" class="t">
 <div class="container contact right1">
   <div class="row my-4">
     <div class="col-md-3">
@@ -164,5 +164,7 @@
     </div>
   </div>
 </div></div>
-
+<script>
+  //  $('#r').remove(); 
+</script>
 {% endblock body %}
