--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -121,8 +121,9 @@ margin: auto;
        margin-left: 5px;
        margin-bottom: 10px;
        /* box-shadow: chartreuse 5px 5px 5px; */
-       color: white;
+       color: rgb(255, 255, 255);
        display: flex;
+       /* text-decoration: w; */
        flex-direction: column;
 align-items: center;     
   justify-content: center;
@@ -139,26 +140,27 @@ align-items: center;
  {% comment %} transform:skewY(5deg); {% endcomment %}
 }
 #dc{
-       background-color: #0088ff;
+       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
 }
 #dd{
-       background-color: rgb(255, 0, 0);
+       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
 }
 #dr{
-       background-color: rgb(38, 0, 255);
+       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
 }
 #td{
-       background-color: rgb(255, 88, 88);
+       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
 }
 #tr{
-       background-color: rgb(90, 233, 255);
+       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
 }
 #tc{
-       background-color: rgb(221, 8, 218);
+       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
+       
 }
 #v{
        /* background-color: #00e400; */
-       background-image: linear-gradient(45deg, rgb(110, 255, 245),rgb(79, 88, 255));
+       background-image: linear-gradient( rgb(110, 255, 245),rgb(79, 88, 255));
 }
 .box b{
        font-family: 'Times New Roman', Times, serif;
@@ -168,7 +170,7 @@ align-items: center;
        width: 100%;
        height: 40px;
        text-align: center;
-       background-color: rgb(0, 0, 84);
+       background-color: rgb(18, 0, 91);
        color: white;
        font-size: 1.4em;
        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
@@ -247,7 +249,10 @@ margin: auto;       }
 
 
     }
-    
+    .box h3{
+           color: rgb(255, 255, 255);
+           font-weight: bold;
+    }
 </style>
 
 {% endblock css %}
@@ -318,7 +323,7 @@ margin: auto;       }
 </div>
 <img src="" alt="" class="flg">
 <div class="vacc">
-<div class="hdd">India</div>
+<div class="hdd" style="font-family: 'Times New Roman', Times, serif;">INDIA</div>
 
 <div id="dc" class="box">
        <b>  Daily Confirmed</b>
@@ -432,9 +437,9 @@ margin: auto;       }
 
 
 {% endblock %}
-{% comment %} 
+
   {% block js %}
 
 {% load static %}
 <script src="{% static 'static.js' %}"></script>
-{% endblock js %}  {% endcomment %}
+{% endblock js %} 
