--- a/templates/home/livechat.html
+++ b/templates/home/livechat.html
@@ -125,8 +125,10 @@
         text-align: left;
         padding: 0 0 0 0;
         vertical-align: top;
+        float: right;
         overflow: hidden;
         margin: -10px 8px
+        
     }
 
     .sendedmsginbox p {
