--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0/css/all.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   {% block links %} {% endblock links %}
@@ -356,6 +357,180 @@
       left: -5px;
       transition: all 0.7s;
     }
+
+    /* ------------------------footercss start -------------------------- */
+    *{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+.total-monal{
+    width: 100vw;
+    border: solid 2px black;
+    background: #292929!important;
+    overflow-x: none;
+}
+
+.middlesection-mm{
+ 
+    margin: 50px auto;
+    color: white;
+    
+    
+}
+.bulleticon-mm{
+    height: 23px;
+    width: 26px;
+    margin: 12px 0 -6px 0px;
+}
+.middlesection-mm{
+display: flex;
+}
+.middlesection-mm span{
+    border-bottom: solid 2px rgb(138, 135, 135);
+    padding-bottom: 6px;
+   
+}
+.middlesectionlink{
+    text-decoration: none;
+}
+.middlesection-ul{
+    
+    list-style-type: none;
+}
+.middlesection-ul li{
+    transition: all 0.5s;
+}
+.middlesection-ul li a{
+    color: rgb(172, 170, 170);
+    transition: all 0.5s;
+}
+.fourthmiddle-mm img{
+    width: 162px;
+    height: 109px;
+    margin-top: 11px;
+
+}
+
+.middlesection-ul  :hover {
+    transform: translateX(5px);
+    
+   
+
+}
+.middlesection-ul li a:hover{
+    color: white;
+    font-weight: bold;
+}
+
+
+.bottomsection-mm p{
+    display: flex;
+    justify-content: center;
+   
+    text-align: center;
+    color: white;
+    margin: 44px 10px;
+}
+.socialicons-mm{
+    display: flex;
+    justify-content: center;
+
+}
+.socialicons-mm a{
+        display: flex;
+        background-color: #494646;
+        height: 50px;
+        width: 50px;
+    margin: 0 15px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    
+    transition: all 0.5s;
+   
+}
+.socialicons-mm a>i{
+    font-size: 25px;
+    color: white;
+    transition: all 0.5s;
+}
+.socialicons-mm a:hover{
+    border: solid 2px rgb(155, 153, 153);
+    transform: translateY(2px);
+    
+}
+.socialicons-mm a>i:hover{
+    transform: scale(0.9);
+}
+.socialicons-mm a .fa-facebook:hover{
+    color: #3b5998;
+}
+.socialicons-mm a .fa-instagram:hover{
+    color: #f14843;
+}
+.socialicons-mm a .fa-twitter:hover{
+    color: #00acee;
+
+}
+.socialicons-mm a .fa-youtube:hover{
+    color: #f00;
+}
+
+@media screen and (max-width: 672px){
+    .containermonika{
+        transform: scale(0.9,0.9);
+    }
+    .middlesection-mm{
+        display: inline;
+    }
+    .middleblock{
+       margin: 5px auto;
+      
+    }
+    .middleblock h4{
+        text-align: center;
+    }
+    .middlesection-ul{}
+    
+    .middlesection-ul li{
+        padding-left: 30vw;
+        display: block;
+    }
+    .fourthmiddle-mm {
+        /* margin-left: 30vw;
+        display: block; */
+        display: flex;
+        justify-content: center;
+    }
+    .thirdmiddle-mm h4{
+        display: none;
+    }
+  
+
+  
+}
+
+@media screen and (min-width: 672px){
+    .middlesection-mm{
+        display: flex;
+        justify-content: space-evenly;
+    }  
+  }
+  
+  @media screen and (max-width: 867px){
+    .fourthmiddle-mm img{
+        width: 141px;
+        height: 86px;
+        margin-top: 27px;
+    } 
+    
+    }
+    
+
+
+    /* ------------------------footercss end -------------------------- */
   </style>
 
 
@@ -460,6 +635,70 @@
 
   {% endblock body %}
 
+  <!-- -----------------footerhtml start------------------- -->
+  {% load static %}
+  
+  <div class="total-monal"> 
+    <div class="containermonal">
+        
+            <div class="middlesection-mm ">
+                <div class="firstmiddle-mm middleblock">
+                    <h4><span>Explore</span> </h4>
+                    <ul class="middlesection-ul">
+                        <li ><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                            <a href="#" class="middlesectionlink">Covid Update</a></li>
+                        <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                            <a href="#" class="middlesectionlink">Donors</a></li>
+                        <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                            <a href="#" class="middlesectionlink">Blogs</a></li>
+                    </ul>
+                </div>
+                <div class="secondmiddle-mm middleblock">
+                    <h4><span>Quick Links</span> </h4>
+                    <ul class="middlesection-ul">
+                        <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                          
+                            <a href="https://www.aarogyasetu.gov.in/" class="middlesectionlink" target="_blank">Aarogya Setu</a></li>
+                        <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                            <a href="https://www.cowin.gov.in/" class="middlesectionlink" target="_blank">CoWIN</a></li>
+                        <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                            <a href="https://www.mohfw.gov.in/" class="middlesectionlink" target="_blank">MoHFW</a></li>
+                    </ul>
+                </div>
+                <div class="thirdmiddle-mm middleblock">
+                    <h4><span>Quick Links</span></h4>
+                    <ul class="middlesection-ul">
+                        <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                            <a href="https://madad-covid.in/" class="middlesectionlink" target="_blank">MADAD-IITI</a></li>
+                        <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                            <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019?gclid=Cj0KCQjwsqmEBhDiARIsANV8H3Z9S2QOOEpwE5kNxleFkJ0lr57jaTgfQk7WJOBPfwKZ-XJP8ZJib-4aAqSgEALw_wcB" class="middlesectionlink" target="_blank">WHO</a></li>
+                        <li><img src="{% static "imgs/bullet3.png" %}" class="bulleticon-mm" alt="">
+                            <a href="https://www.nhp.gov.in/" class="middlesectionlink" target="_blank">NHP</a></li>
+                    </ul>
+                </div>
+                <div class="fourthmiddle-mm middleblock">
+               <img src="{% static "imgs/logo2.png" %}" alt="">
+                  
+                </div>
+               
+            </div>
+            <div class="bottomsection-mm">
+                <div class="socialicons-mm">
+                    <a href=""><i class="fab fa-facebook"></i> </a>
+                    <a href=""><i class="fab fa-instagram"></i> </a>
+                    <a href=""><i class="fab fa-twitter"></i> </a>
+                    <a href=""><i class="fab fa-youtube"></i> </a>
+                </div>
+                
+                <p>A platform where details(age, address, blood group, contact no.) of the covid+ patients who have been recovered will be registered with authentication so that it can be used later by the needy. 
+                </p>
+
+            </div>
+        
+    </div>
+</div>
+
+  <!-- -----------------footerhtml end------------------- -->
 
 
 
