--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -61,6 +61,13 @@
 
 
        }
+       @media only screen and (max-width: 886px) {
+    .total-monal{
+
+        top: 50vh;
+    }
+
+}
 
        #gr{
               height: 98vh;
