--- a/templates/home/contact_us.html
+++ b/templates/home/contact_us.html
@@ -107,6 +107,17 @@
   .ct{
     color: white;
   }
+  .total-monal{
+
+        top: 30vh;
+    }
+  @media only screen and (max-width: 768px) {
+    .total-monal{
+
+        top: 65vh;
+    }
+
+}
  
 </style>
 
