--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -104,7 +104,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
-  img {
+  #bg {
     width: 99.4vw;
     height: 100vh;
     position: absolute;
@@ -156,7 +156,7 @@
 
 {% block body %}
 {% load static %}
-<img src="{% static "imgs/bhh.jpg" %}" alt="home" />
+<img id="bg" src="{% static "imgs/bhh.jpg" %}" alt="home" />
 
 <a href="/blog/addblog">
   <button type="button" id="share" class="btn-hover butto color-1 Shareblg">Share Your Experience <span>&#9998</span>
