--- a/templates/home/Donors.html
+++ b/templates/home/Donors.html
@@ -3,12 +3,11 @@
 {% block title %}Donors{% endblock title %}
 {% block css %}
 <style>
-     .conta {
+.conta {
           width: 60vw;
           margin: auto;
           vertical-align: center;
-     }
-
+     } 
      .showdata {
           max-width: 40vw;
           min-width: 300px;
@@ -24,8 +23,7 @@
            background-color: white;
            background-image: linear-gradient(rgb(224, 222, 228),rgb(232, 238, 174));
            /* opacity: ; */
-     }
-     img{
+     }#bgg{
       width: 99vw;
       height: 100vh;
       position: absolute;
@@ -51,7 +49,7 @@
      position: relative;
      top: 10vh;
 }
-   
+    
 
 
 </style>
@@ -62,7 +60,7 @@
 {% block body %}
  
 {% load static %}
-  <img src="{% static "imgs/donor.jpg" %}" alt="home" />
+  <img id="bgg" src="{% static "imgs/donor.jpg" %}" alt="home" />
 <div class="conta my-4">
 
      <form method="post" action="#" id="Donor_search">{% csrf_token %}
