--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -110,7 +110,7 @@ top: 3vh;
     }
   
 
-    img {
+    #bg {
         width: 99.9vw;
         height: 100vh;
         position: absolute;
@@ -143,7 +143,7 @@ position: sticky;
         margin: auto;
 
 }
-img {
+#bg {
         width: 100vw;
         height: 100vh;
         position: absolute;
@@ -159,6 +159,24 @@ top: 1vh;    }
 
 
 }
+.total-monal{
+    width: 100vw;
+    position: relative;
+    
+    top: 70vh;
+
+    border: solid 2px black;
+    background: #292929!important;
+    overflow-x: none;
+}
+@media only screen and (max-width: 886px) {
+    .total-monal{
+
+        top: 20vh;
+    }
+
+}
+
 </style>
 {% endblock css %}
 
@@ -169,7 +187,7 @@ top: 1vh;    }
 
 
 {% load static %}
-<img src="{% static "imgs/hh.jpg" %}" alt="home" />
+<img id="bg" src="{% static "imgs/hh.jpg" %}" alt="home" />
 
 <div class="Heading">Welcome To Our Website</div>
 
